# SkyPro_TestTask

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  products.json  pyproject.toml  users.json
config/: settings.py  urls.py
member/: admin.py  models.py  serializers.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_member_member_level.py  0003_alter_member_member_level.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  fillusers.py
users/migrations/: 0001_initial.py
