[tool.poetry]
name = "skypro-testtask-dec24"
version = "0.1.0"
description = "Test Task for Certification at the Career Center in SkyPro DEC24"
authors = ["rinatyuk-git <17_ufo_RB@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
python-dotenv = "^1.0.1"
django-admin = "^2.0.2"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
